# CEX

./: .gitignore  README.md  osa_iterm.scpt  readme.md  try.txt
cex-be/: cargo.toml  env.example  try.txt
cex-be/api/: .env  Cargo.toml
cex-be/api/src/: auth_service.rs  main.rs  middleware.rs  redismanager.rs  types.rs  validation.rs
cex-be/api/src/routes/: auth.rs  depth.rs  klines.rs  markets.rs  order.rs  ticker.rs  trades.rs
cex-be/db/: .env  Cargo.toml  diesel.toml
cex-be/db/migrations/2025-10-04-093221-0000_create_users_trades_orders/: down.sql  up.sql
cex-be/db/migrations/2025-10-04-093221-0001_convert_to_hypertables/: down.sql  up.sql
cex-be/db/migrations/2025-10-07-0002_create_markets/: up.sql
cex-be/db/migrations/2025-10-07-0003_create_user_assets/: down.sql  up.sql
cex-be/db/src/: lib.rs  model.rs  schema.rs
cex-be/db/src/start/: db.rs
cex-be/docker/: clear_data.sh
cex-be/engine/: Cargo.toml
cex-be/engine/src/: engine.rs  main.rs  main_engine.rs  orderbook.rs  redis_manager.rs  types.rs
cex-be/engine/src/redis/: redis_manager.rs
cex-be/ws/: Cargo.toml
cex-be/ws/src/: main.rs  subscription_manager.rs  types.rs  user.rs  user_manager.rs
cex-fe/: package-lock.json  package.json  pnpm-lock.yaml
cex-fe/app/: globals.css  layout.tsx  page.tsx
cex-fe/app/components/: Appbar.tsx  MarketBar.tsx  SwapUI.tsx  TradeTable.tsx  TradeView.tsx
cex-fe/app/components/home/: Trades.tsx
cex-fe/app/components/tables/: BalancesTable.tsx
cex-fe/app/context/: MarketContext.tsx  UserContext.tsx
cex-fe/app/login/: page.tsx
cex-fe/app/register/: page.tsx
cex-fe/app/trade/[market]/: page.tsx
cex-fe/app/utils/: ChartManager.ts  httpClient.ts
