[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "3.1.12"
redis = { version = "0.32.5", features = ["tokio-comp"] }
serde = "1.0.219"
serde_json = "1.0.142"
tokio = {version ="1.47.1",  features = ["full"]}
uuid = { version = "1.x", features = ["v4"] }
futures-util = "0.3"
time = { version = "0.3.41", features = ["serde"] }
postgres = "0.19.10"
tokio-postgres = "0.7.13"
