[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.20.3"
log = "0.4"
redis = { version = "0.32.5", features = ["tokio-comp"] }
tokio-postgres = "0.7.13"
poem = "3.1.12"
serde = "1.0.219"
serde_json = "1.0.142"
tokio = {version ="1.47.1",  features = ["full"]}
uuid = { version = "1.x", features = ["v4"] }
futures-util = "0.3"
time = { version = "0.3.41", features = ["serde"] }
chrono = "0.4.42"
