[package]
name = "ws"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
redis = { version = "0.23", features = ["aio", "tokio-comp"] }
uuid = { version = "1", features = ["v4"] }
serde = "1.0.219"
serde_json = "1.0.143"
anyhow = "1.0.99"
